# libjh

./: CMakeLists.txt  Readme.md  package.json
emscripten/: emscripten.jh.post.js  makefile
include/jh/: jh.h
src/: jh.c  jh_ansi_opt64.c
test/: CMakeLists.txt  gtest.cpp  main.cpp
test/data/: jh.csv
